@@ -41,7 +41,7 @@ test = function(num,x,y,error=NULL,warning=NULL,output=NULL) {
     # 2) test() tests more deeply than a diff on console output and uses a data.table appropriate definition of "equals" different
     #    from all.equal and different to identical related to row.names and unused factor levels
     # 3) each test has a unique id which we refer to in commit messages, emails etc.
-    # print(paste0("running test #", num))
+    print(paste0("running test #", num))
     .lasttest <<- num
     ntest <<- ntest + 1
     lastnum <<- num
@@ -3675,6 +3675,22 @@ test(1162.10, is.sorted(as.list(DT)[1:3]), TRUE)
 # FR #5152 - last on length=0 arguments
 x <- character(0)
 test(1163, last(x), character(0))
+
+# Bug fix for #5159 - chmatch and character encoding
+a<-c("a","ä","ß","z")
+au<-iconv(a,"UTF8","latin1")
+test(1164.1, chmatch(a, au), match(a, au))
+
+# BUG #5266 and BUG #5159
+dt<-data.table(a,b=1:4,key="a")
+test(1164.2, dt[au], dt[c(1,4,3,2)])
+
+a<-c("a","ä")
+b<-a
+Encoding(a)<-"unknown"
+A<-data.table(a,c=1:2,key="a")
+B<-data.table(b,d=2:1,key="b")
+test(1164.3, A[B], data.table(a=b, c=1:2, d=2:1, key="a"))
 
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
